# roc-platform-template-rust

./: .env.example  .gitignore  Cargo.toml  README.md  built_with_roc_version.txt  justfile
.github/workflows/: ci.yml  release.yml
ci/: all_tests.sh
examples/: all_roc_syntax.roc  cli_args.roc  dbg_test.roc  echo.roc  echo_multiline.roc  exit.roc  fizzbuzz.roc  hello_world.roc  match.roc  stderr.roc  sum_fold.roc  tests.roc
platform/: Host.roc  Stderr.roc  Stdin.roc  Stdout.roc  main.roc
src/: lib.rs  roc_platform_abi.rs
